--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@uploadthing/react": "^6.5.3",
     "class-variance-authority": "^0.7.0",
